--- a/src/Components/Slideshow.css
+++ b/src/Components/Slideshow.css
@@ -2,5 +2,11 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
+    width: 65%;
+    text-align: center;
+}
+
+.center > h4 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
